--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 # ASP.NET API
-ZgadajSIE_API/.vs/
-ZgadajSIE_API/ZgadajSIE_API/bin/
-ZgadajSIE_API/ZgadajSIE_API/obj/
+ZgadajSieAPI/.vs/
+ZgadajSieAPI/ZgadajSieAPI/bin/
+ZgadajSieAPI/ZgadajSieAPI/obj/
