--- a/ZgadajSieAPI/ZgadajSieAPI/appsettings.Development.json
+++ b/ZgadajSieAPI/ZgadajSieAPI/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=zgadajsie;Username=postgres;Password=090498"
+  },
+  "Jwt": {
+    "Key": "super_secret_key_12345",
+    "Issuer": "yourdomain.com",
+    "Audience": "yourdomain.com"
   }
 }
