[RA] Add register and login methods to the user controller Configure database connection

--- a/ZgadajSieAPI/ZgadajSieAPI/appsettings.Development.json
+++ b/ZgadajSieAPI/ZgadajSieAPI/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=zgadajsie;Username=postgres;Password=090498"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=zgadajsie;Username=postgres;Password=090498"
   },
   "Jwt": {
     "Key": "super_secret_key_12345",
