[RA] Add Evvent model Configure relationship User-Event Test of register and login endpoints - success

--- a/ZgadajSieAPI/ZgadajSieAPI/ZgadajSieAPI.csproj
+++ b/ZgadajSieAPI/ZgadajSieAPI/ZgadajSieAPI.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Data\Migrations\" />
     <Folder Include="Filters\ActionFilters\" />
     <Folder Include="Filters\ExceptionFilters\" />
     <Folder Include="Models\Validations\" />
