--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@vis.gl/react-google-maps": "^0.3.2",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "html5-qrcode": "^2.3.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
