[RA] New endpoints: - event/create - event/pins (get's map pins) Added model validations for: user, profile, event and eventdetails

--- a/ZgadajSieAPI/ZgadajSieAPI/ZgadajSieAPI.csproj
+++ b/ZgadajSieAPI/ZgadajSieAPI/ZgadajSieAPI.csproj
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <Folder Include="Filters\ExceptionFilters\" />
-    <Folder Include="Models\Validations\" />
+    <Folder Include="Models\DTO\BaseDTO\" />
   </ItemGroup>
 
 </Project>
