[RA] - New request GetEvent - Token is alive for 72h instead of 1h - Updated postman collection at ZgadajSie/export/postman

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 ZgadajSieAPI/.vs/
 ZgadajSieAPI/ZgadajSieAPI/bin/
 ZgadajSieAPI/ZgadajSieAPI/obj/
+ZgadajSieAPI\ZgadajSieAPI\appsettings.Development.json
 
 #React Client
 client/node_modules
