--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.7.7",
     "formik": "^2.4.6",
     "html5-qrcode": "^2.3.8",
+    "mobx": "^6.13.5",
+    "mobx-react-lite": "^4.1.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
