--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@vis.gl/react-google-maps": "^0.3.2",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "html5-qrcode": "^2.3.8",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.1.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-geocode": "^1.0.0-alpha.1",
     "react-icons": "^5.3.0",
