[RA] Fixed gitignore (appsettings should be ignored from now on) New endpoint: - leave/{eventId} Postman export updated

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 ZgadajSieAPI/.vs/
 ZgadajSieAPI/ZgadajSieAPI/bin/
 ZgadajSieAPI/ZgadajSieAPI/obj/
-ZgadajSieAPI\ZgadajSieAPI\appsettings.Development.json
+ZgadajSieAPI/ZgadajSieAPI/appsettings.json
+ZgadajSieAPI/ZgadajSieAPI/appsettings.Development.json
 
 #React Client
 client/node_modules
