--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.0",
     "react-toastify": "^10.0.6",
     "react-tooltip": "^5.28.0",
     "web-vitals": "^2.1.4",
