--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-geocode": "^1.0.0-alpha.1",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.0",
